--- a/dennis_project/package.json
+++ b/dennis_project/package.json
@@ -4,20 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "aos": "^3.0.0-beta.6",
+    "firebase-admin": "^10.1.0",
+    "firebase-functions": "^3.20.1",
+    "framer-motion": "^6.3.2",
+    "lottie-web": "^5.9.2",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-lottie-player": "^1.4.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
     "autoprefixer": "^10.4.4",
+    "babel-plugin-styled-components": "^2.0.7",
+    "cross-env": "^7.0.3",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.12",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.23"
   }
 }
